Thesis ch1 and most of ch2

--- a/thesis_tex/jrl_thesis.sty
+++ b/thesis_tex/jrl_thesis.sty
@@ -35,7 +35,7 @@
 \def\submitdate#1{\gdef\@submitdate{#1}}
 \def\copyrightyear#1{\gdef\@copyrightyear{#1}} % \author, \title in report
 \def\@title{Full Length Thesis Title}
-\def\@author{Kyle OShaughnessy}
+\def\@author{Kyle O'Shaughnessy}
 \def\@dept{Electrical \& Computer Engineering}
 \def\@halftitle{Shorter Title}
 \def\@prevdegreeone{Bachelor of Applied Science (Queen's University)}
@@ -174,7 +174,7 @@ of \@degree.
     \doublespacing
     \pagestyle{fancy}
 
-\lhead[{M.A.Sc. Thesis - \@author}]   {{M.A.Sc. Thesis - \@author}}
+\lhead[{M.A.Sc. Thesis - Kyle O'Shaughnessy}]   {{M.A.Sc. Thesis - Kyle O'Shaughnessy}}
 \chead[{}]  {{}} \rhead[{McMaster - Electrical Engineering}]
 {{McMaster - Electrical Engineering}} \lfoot[{}] {{}}
 \cfoot[{\thepage}]  {{\thepage}} \rfoot[ {}]{{}} }
