--- a/thesis_tex/thesis.tex
+++ b/thesis_tex/thesis.tex
@@ -15,6 +15,11 @@
 \usepackage{verbatim}
 \usepackage{cleveref}
 \usepackage{listings}
+\usepackage[per-mode = symbol]{siunitx}
+\usepackage{amssymb} 
+\usepackage{mathrsfs}
+\usepackage{float}
+
 %\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 \usepackage{pdfpages}
 
@@ -97,6 +102,11 @@
 
 
 \include{chap4}
+        \setcounter{figure}{0}
+        \setcounter{equation}{0}
+        \setcounter{table}{0}
+        
+ \include{chap5}
         \setcounter{figure}{0}
         \setcounter{equation}{0}
         \setcounter{table}{0}
