Thesis Ch1/Ch2 and modularized DAP

--- a/thesis_tex/chap1.tex
+++ b/thesis_tex/chap1.tex
@@ -276,7 +276,7 @@ It is also common to group the Z-transform of the glottal pulse waveform, $G(z)$
 From the geometric series expansion, it can be shown that a single zero inside the unit circle can be represented by a set of infinite poles inside the unit circle, i.e.,
 
 \begin{equation}
-	1-az^{-1} = \frac{1}{\prod_{k=0}^{\infty}(1-b_k z^{-1})}, \;\; |z| > |a| \label{eq:zero_approx}
+	1-\tilde{b}z^{-1} = \frac{1}{\prod_{k=0}^{\infty}(1-\tilde{a}_k z^{-1})}, \;\; |z| > |a| \label{eq:zero_approx}
 \end{equation}
 
 \noindent
