--- a/thesis_tex/chap4.tex
+++ b/thesis_tex/chap4.tex
@@ -426,6 +426,8 @@ Ian:
 
 \section{Delay-and-Predict Dereverberation Evaluation with Synthetic Reverberation}
 
+\textbf{TODO: Redo all eval plots with regularization added. Already run on server ($\text{FINAL}\_\text{RESULTS}\_\text{wReg}$) just need to format and input figures to thesis}
+
 \textbf{SI/SQ/Clarity v T60 w/ no noise}
 
 \begin{figure}[H]
