--- a/thesis_tex/thesis.tex
+++ b/thesis_tex/thesis.tex
@@ -36,6 +36,7 @@
 					     {./figures/ch3/Source_Length}
 					     {./figures/ch3/Time_Alignment_and_Linear_Combiner}	
 					      {./figures/ch3/complexity}
+					       {./figures/ch3/Regularization}
 	                     {./figures/ch4/EC_Eval}
 	                     {./figures/ch4/HA_Gain_Eval}
 	                     {./figures/ch4/Metrics_Eval}
