Thesis Updates (All background sections done)

--- a/thesis_tex/chap5.tex
+++ b/thesis_tex/chap5.tex
@@ -1,1 +1,21 @@
-\chapter{Conclusions and Future Work}
+\chapter{Discussion and Conclusions}
+
+* Big picture discussion of what we've learned, how doesa it compare to the literature, what are limitations, what would future directions
+
+\section{Future Work Notes}
+
+Covariance method for LP/MC-LP
+
+Alternate minimization norm (not MSE, maybe something better suited perceptually).
+
+Multi-Step/Delayed Linear Prediction to avoid cancellation of early reflections (and minimize overwhitening distortions)
+
+Adaptive/STFT/Subband implementations (reduced complexity and better tracking at cost of worse convergence, maybe not big of a hit within the context of how much were actually able to acheive / including the amount of regularization im adding). What about a combination of the two?
+
+Evaluation in combination with statistical speech enhancement method.
+
+Compare LIME to DAP on a perceptual basis
+
+Metrics work (review that section): Better binaural front-end (perceptual adaptations, impact of hearing loss), ...
+
+
