--- a/thesis_tex/references.bib
+++ b/thesis_tex/references.bib
@@ -659,16 +659,6 @@
 	publisher={IEEE}
 }
 
-@article{maamar2006partial,
-	title={Partial equalization of non-minimum-phase impulse responses},
-	author={Maamar, Ahfir and Kale, Izzet and Krukowski, Artur and Daoud, Berkani},
-	journal={EURASIP Journal on Advances in Signal Processing},
-	volume={2006},
-	pages={1--8},
-	year={2006},
-	publisher={Springer}
-}
-
 @article{mourjopoulos1991pole,
 	title={Pole and zero modeling of room transfer functions},
 	author={Mourjopoulos, J and Paraskevas, MA},
@@ -678,17 +668,6 @@
 	pages={281--302},
 	year={1991},
 	publisher={Elsevier}
-}
-
-@article{haneda1997multiple,
-	title={Multiple-point equalization of room transfer functions by using common acoustical poles},
-	author={Haneda, Yoichi and Makino, Shoji and Kaneda, Yutaka},
-	journal={IEEE transactions on speech and audio processing},
-	volume={5},
-	number={4},
-	pages={325--333},
-	year={1997},
-	publisher={IEEE}
 }
 
 @article{toole1988modification,
@@ -837,4 +816,485 @@
 	pages={1867--1875},
 	year={1980},
 	publisher={IEEE}
+}
+
+@book{naylor2010speech,
+	title={Speech dereverberation},
+	author={Naylor, Patrick A and Gaubitch, Nikolay D},
+	year={2010},
+	publisher={Springer Science \& Business Media}
+}
+
+@article{ephraim1984speech,
+	title={Speech enhancement using a minimum-mean square error short-time spectral amplitude estimator},
+	author={Ephraim, Yariv and Malah, David},
+	journal={IEEE Transactions on acoustics, speech, and signal processing},
+	volume={32},
+	number={6},
+	pages={1109--1121},
+	year={1984},
+	publisher={IEEE}
+}
+
+@article{ephraim1985speech,
+	title={Speech enhancement using a minimum mean-square error log-spectral amplitude estimator},
+	author={Ephraim, Yariv and Malah, David},
+	journal={IEEE transactions on acoustics, speech, and signal processing},
+	volume={33},
+	number={2},
+	pages={443--445},
+	year={1985},
+	publisher={IEEE}
+}
+
+@phdthesis{polack1988transmission,
+	title={La transmission de l'{\'e}nergie sonore dans les salles},
+	author={Polack, Jean-Dominique},
+	year={1988},
+	school={Le Mans}
+}
+
+@article{giannakis1989identification,
+	title={Identification of nonminimum phase systems using higher order statistics},
+	author={Giannakis, Georgios B and Mendel, Jerry M},
+	journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+	volume={37},
+	number={3},
+	pages={360--377},
+	year={1989},
+	publisher={IEEE}
+}
+
+@inproceedings{slock1994blind,
+	title={Blind fractionally-spaced equalization, perfect-reconstruction filter banks and multichannel linear prediction},
+	author={Slock, Dirk TM},
+	booktitle={Proceedings of ICASSP'94. IEEE International Conference on Acoustics, Speech and Signal Processing},
+	volume={4},
+	pages={IV--585},
+	year={1994},
+	organization={IEEE}
+}
+
+@article{gurelli1995evam,
+	title={EVAM: An eigenvector-based algorithm for multichannel blind deconvolution of input colored signals},
+	author={Gurelli, Mehmet I and Nikias, Chrysostomos L},
+	journal={IEEE Transactions on Signal Processing},
+	volume={43},
+	number={1},
+	pages={134--149},
+	year={1995},
+	publisher={IEEE}
+}
+
+@article{whittle1963fitting,
+	title={On the fitting of multivariate autoregressions, and the approximate canonical factorization of a spectral density matrix},
+	author={Whittle, Peter},
+	journal={Biometrika},
+	volume={50},
+	number={1-2},
+	pages={129--134},
+	year={1963},
+	publisher={Oxford University Press}
+}
+
+@article{inouye1983modeling,
+	title={Modeling of multichannel time series and extrapolation of matrix-valued autocorrelation sequences},
+	author={Inouye, Yujiro},
+	journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+	volume={31},
+	number={1},
+	pages={45--55},
+	year={1983},
+	publisher={IEEE}
+}
+
+@inproceedings{triki2006delay,
+	title={Delay and predict equalization for blind speech dereverberation},
+	author={Triki, Mahdi and Slock, Dirk TM},
+	booktitle={2006 IEEE International Conference on Acoustics Speech and Signal Processing Proceedings},
+	volume={5},
+	pages={V--V},
+	year={2006},
+	organization={IEEE}
+}
+
+@inproceedings{triki2007multivariate,
+	title={Multivariate LP based MMSE-ZF equalizer design considerations and application to multimicrophone dereverberation},
+	author={Triki, Mahdi and Slock, Dirk TM},
+	booktitle={2007 IEEE International Conference on Acoustics, Speech and Signal Processing-ICASSP'07},
+	volume={1},
+	pages={I--197},
+	year={2007},
+	organization={IEEE}
+}
+
+@article{furuya2007robust,
+	title={Robust speech dereverberation using multichannel blind deconvolution with spectral subtraction},
+	author={Furuya, Ken'ichi and Kataoka, Akitoshi},
+	journal={IEEE Transactions on audio, speech, and language processing},
+	volume={15},
+	number={5},
+	pages={1579--1591},
+	year={2007},
+	publisher={IEEE}
+}
+
+@inproceedings{triki2008robust,
+	title={Robust delay-\&-predict equalization for blind SIMO channel dereverberation},
+	author={Triki, Mahdi and Slock, Dirk TM},
+	booktitle={2008 Hands-Free Speech Communication and Microphone Arrays},
+	pages={248--251},
+	year={2008},
+	organization={IEEE}
+}
+
+@inproceedings{omar2008singular,
+	title={Singular block Toeplitz matrix approximation and application to multi-microphone speech dereverberation},
+	author={Omar, Samir-Mohamad and Slock, Dirk TM},
+	booktitle={2008 IEEE 10th Workshop on Multimedia Signal Processing},
+	pages={52--57},
+	year={2008},
+	organization={IEEE}
+}
+
+@article{delcroix2007precise,
+	title={Precise dereverberation using multichannel linear prediction},
+	author={Delcroix, Marc and Hikichi, Takafumi and Miyoshi, Masato},
+	journal={IEEE Transactions on Audio, Speech, and Language Processing},
+	volume={15},
+	number={2},
+	pages={430--440},
+	year={2007},
+	publisher={IEEE}
+}
+
+@inproceedings{gesbert1997robust,
+	title={Robust blind channel identification and equalization based on multi-step predictors},
+	author={Gesbert, David and Duhamel, Pierre},
+	booktitle={1997 IEEE International Conference on Acoustics, Speech, and Signal Processing},
+	volume={5},
+	pages={3621--3624},
+	year={1997},
+	organization={IEEE}
+}
+
+@inproceedings{kinoshita2007multi,
+	title={Multi-step linear prediction based speech dereverberation in noisy reverberant environment.},
+	author={Kinoshita, Keisuke and Delcroix, Marc and Nakatani, Tomohiro and Miyoshi, Masato},
+	booktitle={Interspeech},
+	pages={854--857},
+	year={2007}
+}
+
+@article{nakatani2010speech,
+	title={Speech dereverberation based on variance-normalized delayed linear prediction},
+	author={Nakatani, Tomohiro and Yoshioka, Takuya and Kinoshita, Keisuke and Miyoshi, Masato and Juang, Biing-Hwang},
+	journal={IEEE Transactions on Audio, Speech, and Language Processing},
+	volume={18},
+	number={7},
+	pages={1717--1731},
+	year={2010},
+	publisher={IEEE}
+}
+
+@inproceedings{nakatani2008blind,
+	title={Blind speech dereverberation with multi-channel linear prediction based on short time Fourier transform representation},
+	author={Nakatani, Tomohiro and Yoshioka, Takuya and Kinoshita, Keisuke and Miyoshi, Masato and Juang, Biing-Hwang},
+	booktitle={2008 IEEE International Conference on Acoustics, Speech and Signal Processing},
+	pages={85--88},
+	year={2008},
+	organization={IEEE}
+}
+
+@article{jukic2015multi,
+	title={Multi-channel linear prediction-based speech dereverberation with sparse priors},
+	author={Juki{\'c}, Ante and van Waterschoot, Toon and Gerkmann, Timo and Doclo, Simon},
+	journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+	volume={23},
+	number={9},
+	pages={1509--1520},
+	year={2015},
+	publisher={IEEE}
+}
+
+@article{jukic2016adaptive,
+	title={Adaptive speech dereverberation using constrained sparse multichannel linear prediction},
+	author={Juki{\'c}, Ante and van Waterschoot, Toon and Doclo, Simon},
+	journal={IEEE Signal Processing Letters},
+	volume={24},
+	number={1},
+	pages={101--105},
+	year={2016},
+	publisher={IEEE}
+}
+
+@inproceedings{yoshioka2013dereverberation,
+	title={Dereverberation for reverberation-robust microphone arrays},
+	author={Yoshioka, Takuya and Nakatani, Tomohiro},
+	booktitle={21st European signal processing conference (EUSIPCO 2013)},
+	pages={1--5},
+	year={2013},
+	organization={IEEE}
+}
+
+@inproceedings{jukic2016general,
+	title={A general framework for multi-channel speech dereverberation exploiting sparsity},
+	author={Jukic, Ante and van Waterschoot, Toon and Gerkmann, Timo and Doclo, Simon},
+	booktitle={Proc. AES 60th Int. Conf., Leuven, Belgium},
+	pages={1--8},
+	year={2016}
+}
+
+@misc{oppenheim1976digital,
+	title={Digital signal processing and theory and application of digital signal processing},
+	author={Oppenheim, AV and Schafer, RW and Rabiner, LR and Gold, B and Hunt, BR},
+	year={1976},
+	publisher={American Institute of Physics}
+}
+
+@inproceedings{petropulu1994cepstrum,
+	title={Cepstrum based deconvolution for speech dereverberation},
+	author={Petropulu, Athina P and Subramaniam, Suresh},
+	booktitle={Proceedings of ICASSP'94. IEEE International Conference on Acoustics, Speech and Signal Processing},
+	volume={1},
+	pages={I--9},
+	year={1994},
+	organization={IEEE}
+}
+
+@article{elko1996microphone,
+	title={Microphone array systems for hands-free telecommunication},
+	author={Elko, Gary W},
+	journal={Speech communication},
+	volume={20},
+	number={3-4},
+	pages={229--240},
+	year={1996},
+	publisher={Elsevier}
+}
+
+@article{van1988beamforming,
+	title={Beamforming: A versatile approach to spatial filtering},
+	author={Van Veen, Barry D and Buckley, Kevin M},
+	journal={IEEE assp magazine},
+	volume={5},
+	number={2},
+	pages={4--24},
+	year={1988},
+	publisher={IEEE}
+}
+
+@article{flanagan1985computer,
+	title={Computer-steered microphone arrays for sound transduction in large rooms},
+	author={Flanagan, James L and Johnston, James D and Zahn, Rudolf and Elko, Gary W},
+	journal={The Journal of the Acoustical Society of America},
+	volume={78},
+	number={5},
+	pages={1508--1518},
+	year={1985},
+	publisher={Acoustical Society of America}
+}
+
+@article{yegnanarayana2002enhancement,
+	title={Enhancement of reverberant speech using LP residual signal},
+	author={Yegnanarayana, Bayya and Murthy, P Satyanarayana},
+	journal={IEEE Transactions on Speech and Audio Processing},
+	volume={8},
+	number={3},
+	pages={267--281},
+	year={2002},
+	publisher={IEEE}
+}
+
+@inproceedings{thomas2007practical,
+	title={A practical multichannel dereverberation algorithm using multichannel DYPSA and spatiotemporal averaging},
+	author={Thomas, Mark RP and Gaubitch, Nikolay D and Gudnason, Jon and Naylor, Patrick A},
+	booktitle={2007 IEEE workshop on applications of signal processing to audio and acoustics},
+	pages={50--53},
+	year={2007},
+	organization={IEEE}
+}
+
+@inproceedings{gillespie2001speech,
+	title={Speech dereverberation via maximum-kurtosis subband adaptive filtering},
+	author={Gillespie, Bradford W and Malvar, Henrique S and Flor{\^e}ncio, Dinei AF},
+	booktitle={2001 IEEE International Conference on Acoustics, Speech, and Signal Processing. Proceedings (Cat. No. 01CH37221)},
+	volume={6},
+	pages={3701--3704},
+	year={2001},
+	organization={IEEE}
+}
+
+@article{identification1995least,
+	title={A Least—Squares Approach to},
+	author={Identification, Blind Channel},
+	journal={IEEE TRANSACTIONS ON SIGNAL PROCESSING},
+	volume={43},
+	number={12},
+	year={1995}
+}
+
+@article{huang2003class,
+	title={A class of frequency-domain adaptive approaches to blind multichannel identification},
+	author={Huang, Yiteng and Benesty, Jacob},
+	journal={IEEE Transactions on signal processing},
+	volume={51},
+	number={1},
+	pages={11--24},
+	year={2003},
+	publisher={IEEE}
+}
+
+@inproceedings{huang2002adaptive,
+	title={Adaptive blind channel identification: multi-channel least mean square and Newton algorithms},
+	author={Huang, Yiteng and Benesty, Jacob},
+	booktitle={2002 IEEE International Conference on Acoustics, Speech, and Signal Processing},
+	volume={2},
+	pages={II--1637},
+	year={2002},
+	organization={IEEE}
+}
+
+@inproceedings{kallinger2006multi,
+	title={Multi-channel room impulse response shaping-a study},
+	author={Kallinger, Markus and Mertins, Alfred},
+	booktitle={2006 IEEE International Conference on Acoustics Speech and Signal Processing Proceedings},
+	volume={5},
+	pages={V--V},
+	year={2006},
+	organization={IEEE}
+}
+
+@inproceedings{zhang2010use,
+	title={On the use of channel shortening in multichannel acoustic system equalization},
+	author={Zhang, Wancheng and Habets, Emanu{\"e}l AP and Naylor, Patrick A},
+	booktitle={Proc. Int. Workshop Acoust. Echo Noise Control (IWAENC)},
+	year={2010}
+}
+
+@inproceedings{kodrasi2012robust,
+	title={Robust partial multichannel equalization techniques for speech dereverberation},
+	author={Kodrasi, Ina and Doclo, Simon},
+	booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	pages={537--540},
+	year={2012},
+	organization={IEEE}
+}
+
+@article{braun2016online,
+	title={Online dereverberation for dynamic scenarios using a Kalman filter with an autoregressive model},
+	author={Braun, Sebastian and Habets, Emanu{\"e}l AP},
+	journal={IEEE Signal Processing Letters},
+	volume={23},
+	number={12},
+	pages={1741--1745},
+	year={2016},
+	publisher={IEEE}
+}
+
+@inproceedings{hopgood2005models,
+	title={Models for blind speech dereverberation: A subband all-pole filtered block stationary autoregressive process},
+	author={Hopgood, James R},
+	booktitle={2005 13th European Signal Processing Conference},
+	pages={1--4},
+	year={2005},
+	organization={IEEE}
+}
+
+@article{schmid2014variational,
+	title={Variational Bayesian inference for multichannel dereverberation and noise reduction},
+	author={Schmid, Dominic and Enzner, Gerald and Malik, Sarmad and Kolossa, Dorothea and Martin, Rainer},
+	journal={IEEE/ACM transactions on audio, speech, and language processing},
+	volume={22},
+	number={8},
+	pages={1320--1335},
+	year={2014},
+	publisher={IEEE}
+}
+
+@article{grenier2003time,
+	title={Time-dependent ARMA modeling of nonstationary signals},
+	author={Grenier, Yves},
+	journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+	volume={31},
+	number={4},
+	pages={899--911},
+	year={2003},
+	publisher={IEEE}
+}
+
+@article{lebart2001new,
+	title={A new method based on spectral subtraction for speech dereverberation},
+	author={Lebart, Katia and Boucher, Jean-Marc and Denbigh, Philip N},
+	journal={Acta Acustica united with Acustica},
+	volume={87},
+	number={3},
+	pages={359--366},
+	year={2001},
+	publisher={European Acoustics Association}
+}
+
+@inproceedings{habets2005multi,
+	title={Multi-channel speech dereverberation based on a statistical model of late reverberation},
+	author={Habets, Emanu{\"e}l AP},
+	booktitle={Proceedings.(ICASSP'05). IEEE International Conference on Acoustics, Speech, and Signal Processing, 2005.},
+	volume={4},
+	pages={iv--173},
+	year={2005},
+	organization={IEEE}
+}
+
+@article{habets2007single,
+	title={Single-and multi-microphone speech dereverberation using spectral enhancement},
+	author={Habets, Emanu{\"e}l Anco Peter},
+	year={2007}
+}
+
+@article{erkelens2010correlation,
+	title={Correlation-based and model-based blind single-channel late-reverberation suppression in noisy time-varying acoustical environments},
+	author={Erkelens, Jan S and Heusdens, Richard},
+	journal={IEEE transactions on audio, speech, and language processing},
+	volume={18},
+	number={7},
+	pages={1746--1765},
+	year={2010},
+	publisher={IEEE}
+}
+
+@inproceedings{thiergart2012signal,
+	title={Signal-to-reverberant ratio estimation based on the complex spatial coherence between omnidirectional microphones},
+	author={Thiergart, Oliver and Del Galdo, Giovanni and Habets, Emanu{\"e}l AP},
+	booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	pages={309--312},
+	year={2012},
+	organization={IEEE}
+}
+
+@inproceedings{thiergart2014power,
+	title={Power-based signal-to-diffuse ratio estimation using noisy directional microphones},
+	author={Thiergart, Oliver and Ascherl, Tobias and Habets, Emanu{\"e}l AP},
+	booktitle={2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	pages={7440--7444},
+	year={2014},
+	organization={IEEE}
+}
+
+@article{schwartz2014multi,
+	title={Multi-microphone speech dereverberation and noise reduction using relative early transfer functions},
+	author={Schwartz, Ofer and Gannot, Sharon and Habets, Emanu{\"e}l AP},
+	journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+	volume={23},
+	number={2},
+	pages={240--251},
+	year={2014},
+	publisher={IEEE}
+}
+
+@inproceedings{braun2013informed,
+	title={An informed spatial filter for dereverberation in the spherical harmonic domain},
+	author={Braun, Sebastian and Jarrett, Daniel P and Fischer, Johannes and Habets, Emanu{\"e}l AP},
+	booktitle={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+	pages={669--673},
+	year={2013},
+	organization={IEEE}
 }
