--- a/thesis_tex/thesis.tex
+++ b/thesis_tex/thesis.tex
@@ -116,10 +116,10 @@
 
 
 
-\include{chap4}
-        \setcounter{figure}{0}
-        \setcounter{equation}{0}
-        \setcounter{table}{0}
+%\include{chap4}
+ %       \setcounter{figure}{0}
+  %     \setcounter{equation}{0}
+   %     \setcounter{table}{0}
         
  \include{chap5}
         \setcounter{figure}{0}
