--- a/thesis_tex/chap3.tex
+++ b/thesis_tex/chap3.tex
@@ -70,7 +70,7 @@
 		\centering
 		\includegraphics[width=\textwidth]{MINT_EDC_0p5N60_div_M_minus_1}
 	\end{subfigure}
-	\caption{MINT equalizer performance for various equalizer orders relative to the actual length of the FIR channel (L) and the number of samples corresponding to the T60 of the channel (N60 = T60 * sample rate))}
+	\caption{MINT equalizer performance for various equalizer orders relative to the actual length of the FIR channel ($L$) and the number of samples corresponding to the T60 of the channel ($\mathrm{N60} = \mathrm{T60}  \cdot \mathrm{sample\ rate}$)}
 	\label{fig:params_p2_MINT_compare}
 \end{figure}
 
@@ -97,7 +97,7 @@ Delay-and-Predict config:
 \begin{figure}[H]
 	\includegraphics[width=0.49\textwidth]{S1_N60_div_M_minus_1}
 	\centering
-	\caption{Source whitening results using a p1 = 4000 order linear predictor. The prediction error filter coefficients were computed based on clean speech and the same filter was used in all tests in this section to assess the multichannel prediction stage of the delay-and-predict algorithm in isolation.}
+	\caption{Source whitening results using a $\mathrm{p1} = 4000$ order linear predictor. The prediction error filter coefficients were computed based on clean speech and the same filter was used in all tests in this section to assess the multichannel prediction stage of the delay-and-predict algorithm in isolation.}
 	\label{fig:params_p2_stage1}
 \end{figure}
 
@@ -120,7 +120,7 @@ Delay-and-Predict config:
 		\includegraphics[width=\textwidth]{EDC_L_div_M_minus_1}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order p2 = L / (M-1), where L is the FIR RIR length and M is the number of channels. Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
+	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order $\mathrm{p2} = L / (M-1)$, where $L$ is the FIR RIR length and $M$ is the number of channels. Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
 	\label{fig:params_p2_L}
 \end{figure}
 
@@ -160,7 +160,7 @@ Delay-and-Predict config:
 		\centering
 		\includegraphics[width=\textwidth]{EDC_0p5N60_div_M_minus_1}
 	\end{subfigure}
-	\caption{Delay-and-Predict dereverberation performance with various multichannel linear prediction orders (p2) relative to the actual length of the FIR channel (L) and the number of samples corresponding to the T60 of the channel (N60). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
+	\caption{Delay-and-Predict dereverberation performance with various multichannel linear prediction orders ($\mathrm{p2}$) relative to the actual length of the FIR channel ($L$) and the number of samples corresponding to the T60 of the channel ($\mathrm{N60}$). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
 	\label{fig:params_p2_compare}
 \end{figure}
 
@@ -209,7 +209,7 @@ Delay-and-Predict config:
 		\includegraphics[width=\textwidth]{EDC_p1_200}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order p1 = 200 and multichannel linear prediction order p2 = N60 / (M-1).}
+	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order $\mathrm{p1} = 200$ and multichannel linear prediction order $\mathrm{p2} = N60 / (M-1)$.}
 	\label{fig:params_p1_200}
 \end{figure}
 
@@ -249,7 +249,7 @@ Delay-and-Predict config:
 		\centering
 		\includegraphics[width=\textwidth]{EDC_p1_2x_p2}
 	\end{subfigure}
-	\caption{Delay-and-Predict dereverberation performance with various source whitening prediction orders (p1) relative to the multichannel linear prediction order p2 = N60 / (M-1)}
+	\caption{Delay-and-Predict dereverberation performance with various source whitening prediction orders (p1) relative to the multichannel linear prediction order $\mathrm{p2} = \mathrm{N60} / (M-1)$}
 	\label{fig:params_p1_compare}
 \end{figure}
 
@@ -374,7 +374,7 @@ Test: Same spectrum different length
 		\centering
 		\includegraphics[width=\textwidth]{EDC_SourceLength_4_Blind}
 	\end{subfigure}
-	\caption{Delay-and-Predict dereverberation performance with the same speech sample (SA1.WAV, 58061 samples) looped to various data lengths to preserve the same spectrum. Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source Whitening stage was performed on revererbant speech (i.e., blind).}
+	\caption{Delay-and-Predict dereverberation performance with the same speech sample (SA1.WAV, 58061 samples) looped to various data lengths to preserve the same spectrum. Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source Whitening stage was performed on revererbant speech (i.e., blind).}
 	\label{fig:params_source_length_compare}
 \end{figure}
 
@@ -445,7 +445,7 @@ Test: Same length different spectrum
 		\centering
 		\includegraphics[width=\textwidth]{EDC_SourceSpectrum_10secWhiteNoise_Blind}
 	\end{subfigure}
-	\caption{Delay-and-Predict dereverberation performance with the source signal generated by looping various length white noise sequences looped the same data length (i.e., same data length, different spectra). Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source Whitening stage was performed on revererbant speech (i.e., blind).}
+	\caption{Delay-and-Predict dereverberation performance with the source signal generated by looping various length white noise sequences looped the same data length (i.e., same data length, different spectra). Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source Whitening stage was performed on revererbant speech (i.e., blind).}
 	\label{fig:params_source_spectrum_compare}
 \end{figure}
 
@@ -489,7 +489,7 @@ Test: Same length different spectrum
 		\centering
 		\includegraphics[width=\textwidth]{EDC_SourceSpectrum_10secShapedNoise_filter3_Blind}
 	\end{subfigure}
-	\caption{Delay-and-Predict dereverberation performance with the source signal generated by filtering 60 msec of speech with filters of various peakiness. Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source Whitening stage was performed on revererbant speech (i.e., blind).}
+	\caption{Delay-and-Predict dereverberation performance with the source signal generated by filtering \qty{60}{\milli\sec} of speech with filters of various peakiness. Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source Whitening stage was performed on revererbant speech (i.e., blind).}
 	\label{fig:params_source_spectrum_shaped_compare}
 \end{figure}
 
@@ -538,7 +538,7 @@ Add discussion about linear combiner and why the weighting vector suggested by s
 		\includegraphics[width=\textwidth]{EDC_TimeAlignment_2sampleDelay}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance an incremental 2 sample delay added to each channel.}
+	\caption{Delay-and-Predict dereverberation performance an incremental 2-sample delay added to each channel.}
 	\label{fig:params_TimeAlignment_2sampleDelay}
 \end{figure}
 
@@ -573,44 +573,6 @@ Add discussion about linear combiner and why the weighting vector suggested by s
 	\label{fig:params_TimeAlignment_0sampleDelay}
 \end{figure}
 
-
-\section{Autocorrelation Matrix Regularization}
-
- Regularization Factor: Diagonal reg matrix=reg factor*I is applied to the autocorrelation matrices used in both linear-prediction stages (i.e., $R_{ym}$ and $R_{mc}$) to improve numerical stability of algorithm at the cost of reduced cancellation of lower energy reverb. This trade-off may be worth while since the low energy part of the reverb tail is often close in magnitude to the noise floor and therefore is cancelled effectively by the algorithm (in fact the resulting equalizer often introduces low energy reverb)
- 
- $reg factor = 10^-5$;
- 
- \begin{figure}[H]
- 	\centering
- 	% Without Regularization
-	\begin{subfigure}[b]{0.45\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{EIR_500T60_NoRegularization}
-	\end{subfigure}
-	\hfill
-	\begin{subfigure}[b]{0.45\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{EDC_500T60_NoRegularization}
-	\end{subfigure}
-
-	% With Regularization
-	\begin{subfigure}[b]{0.45\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{EIR_500T60_wRegularization}
-	\end{subfigure}
-	\hfill
-	\begin{subfigure}[b]{0.45\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{EDC_500T60_wRegularization}
-	\end{subfigure}
- 	\caption{Impact of autocorrelation matrix regularization on dereverberation performance.}
- 	\label{fig:params_regularization}
- \end{figure}
- 
- 
-
-
-
 \section{Algorithmic Complexity Analysis}
 
 \begin{figure}[H]
@@ -624,7 +586,7 @@ Add discussion about linear combiner and why the weighting vector suggested by s
 		\centering
 		\includegraphics[width=\textwidth]{complexity_ops_comparison_zoomed}
 	\end{subfigure}
-	\caption{Analysis of the computational complexities of Least Squares solution and Inverse filter implementations as a function of T60, For M=4 microphones, p2 = N60/(M-1) and p1 = 1.25*p2*(M-1). Complexity of LMS Solution also shown for comparison.}
+	\caption{Analysis of the computational complexities of Least Squares solution and Inverse filter implementations as a function of T60, For $M=4$ microphones, $\mathrm{p2} = \mathrm{N60}/(M-1)$ and $\mathrm{p1} = 1.25 \cdot \mathrm{p2} \cdot (M-1)$. Complexity of LMS Solution also shown for comparison.}
 	\label{fig:complexity_operations}
 \end{figure}
 
@@ -639,7 +601,7 @@ Add discussion about linear combiner and why the weighting vector suggested by s
 		\centering
 		\includegraphics[width=\textwidth]{complexity_mem_comparison_zoomed}
 	\end{subfigure}
-	\caption{Analysis of the algorithmic memory requirements  of Least Squares solution (could be temporary memory) and Inverse filter implementations (persistent memory) as a function of T60, For M=4 microphones, p2 = N60/(M-1) and p1 = 1.25*p2*(M-1). Memory requirements of LMS Solution also shown for comparison.}
+	\caption{Analysis of the algorithmic memory requirements  of Least Squares solution (could be temporary memory) and Inverse filter implementations (persistent memory) as a function of T60, For M=4 microphones, $\mathrm{p2} = \mathrm{N60}/(M-1)$ and $\mathrm{p1} = 1.25 \cdot \mathrm{p2} \cdot (M-1)$. Memory requirements of LMS Solution also shown for comparison.}
 	\label{fig:complexity_memory}
 \end{figure}
 
@@ -679,7 +641,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_N60_div_M_minus_1}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order p2 = N60 / (M-1), where N60 is the number of samples corresponding to the T60 and M is the number of channels (i.e., the MINT condition based on T60 rather than the FIR RIR length). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
+	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order $\mathrm{p2} = \mathrm{N60} / (M-1)$, where N60 is the number of samples corresponding to the T60 and $M$ is the number of channels (i.e., the MINT condition based on T60 rather than the FIR RIR length). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
 	\label{fig:params_p2_N60}
 \end{figure}
 
@@ -707,7 +669,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_0p75N60_div_M_minus_1}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order p2 = 0.75 * N60 / (M-1), where N60 is the number of samples corresponding to the T60 and M is the number of channels (i.e., suboptimal with respect to the MINT condition based on T60 rather than the FIR RIR length). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
+	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order $\mathrm{p2} = 0.75 \cdot \mathrm{N60} / (M-1)$, where N60 is the number of samples corresponding to the T60 and $M$ is the number of channels (i.e., suboptimal with respect to the MINT condition based on T60 rather than the FIR RIR length). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
 	\label{fig:params_p2_0p75_N60}
 \end{figure}
 
@@ -735,7 +697,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_0p5N60_div_M_minus_1}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order p2 = 0.5 * N60 / (M-1), where N60 is the number of samples corresponding to the T60 and M is the number of channels (i.e., More suboptimal with respect to the MINT condition based on T60 rather than the FIR RIR length). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
+	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order $\mathrm{p2} = 0.5 \cdot \mathrm{N60} / (M-1)$, where N60 is the number of samples corresponding to the T60 and $M$ is the number of channels (i.e., More suboptimal with respect to the MINT condition based on T60 rather than the FIR RIR length). Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
 	\label{fig:params_p2_0p5_N60}
 \end{figure}
 
@@ -765,7 +727,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_p1_1000}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order p1 = 1000 and multichannel linear prediction order p2 = N60 / (M-1).}
+	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order $\mathrm{p1} = 1000$ and multichannel linear prediction order $\mathrm{p2} = \mathrm{N60} / (M-1)$.}
 	\label{fig:params_p1_1000}
 \end{figure}
 
@@ -793,7 +755,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_p1_based_on_p2}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order p1 = p2 * (M-1) and multichannel linear prediction order p2 = N60 / (M-1). I.e., The source whitening filter order is the same as the effective MINT filter order.}
+	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order $\mathrm{p1} = \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order $\mathrm{p2} = \mathrm{N60} / (M-1)$. I.e., The source whitening filter order is the same as the effective MINT filter order.}
 	\label{fig:params_p1_based_on_p2}
 \end{figure}
 
@@ -821,7 +783,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_p1_2x_p2}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order p1 = 2 * p2 * (M-1) and multichannel linear prediction order p2 = N60 / (M-1). I.e., The source whitening filter order is twice the effective MINT filter order.}
+	\caption{Delay-and-Predict dereverberation performance with source whitening prediction order $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order $\mathrm{p2} = \mathrm{N60} / (M-1)$. I.e., The source whitening filter order is twice the effective MINT filter order.}
 	\label{fig:params_p1_2x_p2}
 \end{figure}
 
@@ -853,7 +815,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceLength_1_NotBlind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance for a 3.6 second speech source (58061 samples). Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using clean speech.}
+	\caption{Delay-and-Predict dereverberation performance for a \qty{3.6}{second} speech source (58061 samples). Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using clean speech.}
 	\label{fig:params_source_length_1_not_blind}
 \end{figure}
 
@@ -879,7 +841,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceLength_1_Blind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance for a 3.6 second speech source (58061 samples). Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using reverberant speech (blind estimation).}
+	\caption{Delay-and-Predict dereverberation performance for a  \qty{3.6}{second} speech source (58061 samples). Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using reverberant speech (blind estimation).}
 	\label{fig:params_source_length_1_blind}
 \end{figure}
 
@@ -909,7 +871,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceLength_3_NotBlind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance for a 10.9 second speech source (174183 samples). The source was generated by looping the same 3.6 secound source 3 times to maintain the same spectrum. Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using clean speech.}
+	\caption{Delay-and-Predict dereverberation performance for a \qty{10.9}{second} speech source (174183 samples). The source was generated by looping the same \qty{3.6}{second} source 3 times to maintain the same spectrum. Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using clean speech.}
 	\label{fig:params_source_length_3_not_blind}
 \end{figure}
 
@@ -935,7 +897,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceLength_3_Blind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance for a 10.9 second speech source (174183 samples). The source was generated by looping the same 3.6 secound source 3 times to maintain the same spectrum. Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using revererant speech (blind estimation).}
+	\caption{Delay-and-Predict dereverberation performance for a \qty{10.9}{second} speech source (174183 samples). The source was generated by looping the same \qty{3.6}{second} source 3 times to maintain the same spectrum. Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using revererant speech (blind estimation).}
 	\label{fig:params_source_length_3_blind}
 \end{figure}
 
@@ -965,7 +927,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceSpectrum_1secWhiteNoise_NotBlind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source being 1 second of white noise looped to 60 sec. Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using clean speech.}
+	\caption{Delay-and-Predict dereverberation performance with source being 1 second of white noise looped to 60 seconds. Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using clean speech.}
 	\label{fig:params_source_spectrum_1sec_not_blind}
 \end{figure}
 
@@ -991,7 +953,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceSpectrum_1secWhiteNoise_Blind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source being 1 second of white noise looped to 60 sec. Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using revererant speech (blind estimation).}
+	\caption{Delay-and-Predict dereverberation performance with source being 1 second of white noise looped to 60 seconds. Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} * (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using revererant speech (blind estimation).}
 	\label{fig:params_source_spectrum_1sec_blind}
 \end{figure}
 
@@ -1020,7 +982,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceSpectrum_10secWhiteNoise_NotBlind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source being 10 second of white noise looped to 60 sec (i.e., source is less peaky than the previous case). Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using clean speech.}
+	\caption{Delay-and-Predict dereverberation performance with source being 10 seconds of white noise looped to 60 seconds (i.e., source is less peaky than the previous case). Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} * (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using clean speech.}
 	\label{fig:params_source_spectrum_10sec_not_blind}
 \end{figure}
 
@@ -1046,7 +1008,7 @@ Summarize the role and requirements for each parameter
 		\includegraphics[width=\textwidth]{EDC_SourceSpectrum_10secWhiteNoise_Blind}
 	\end{subfigure}
 	\hfill
-	\caption{Delay-and-Predict dereverberation performance with source being 10 second of white noise looped to 60 sec (i.e., source is less peaky than the previous case). Source whitening prediction order was p1 = 2 * p2 * (M-1) and multichannel linear prediction order was p2 = N60 / (M-1). Source whitening filter was estimated using revererant speech (blind estimation).}
+	\caption{Delay-and-Predict dereverberation performance with source being 10 seconds of white noise looped to 60 seconds (i.e., source is less peaky than the previous case). Source whitening prediction order was $\mathrm{p1} = 2 \cdot \mathrm{p2} \cdot (M-1)$ and multichannel linear prediction order was $\mathrm{p2} = \mathrm{N60} / (M-1)$. Source whitening filter was estimated using revererant speech (blind estimation).}
 	\label{fig:params_source_spectrum_10sec_blind}
 \end{figure}
 
